--- a/css/styles.css
+++ b/css/styles.css
@@ -8,17 +8,18 @@
   --light-slate: #8e8f99;
   --cornflower: #e7e9fc;
   --cloud: #f4f4fd;
-  --navy-blue-modal: #2e2f42;
+  --navy-blue-modal: rgba(46, 47, 66, 0.4);
   --grey: #2e2f42;
   --white: #ffffff;
   --dairy: #fcfcfc;
   /* Fonts */
   --primary-font: Roboto, sans-serif;
   --secondary-font: Raleway, sans-serif;
+  /* Animation */
+  --anim: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
-  background-color: var(--white);
   font-family: var(--primary-font);
   font-weight: 400;
   font-size: 16px;
@@ -26,6 +27,8 @@ body {
   letter-spacing: 0.02em;
   font-style: normal;
   color: var(--slate);
+
+  background-color: var(--white);
 }
 
 /* Reset */
@@ -54,6 +57,7 @@ img {
 }
 .visually-hidden {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -68,6 +72,8 @@ img {
 
 /* Recurring classes */
 .title {
+  margin-bottom: 72px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -75,15 +81,15 @@ img {
   text-align: center;
   text-transform: capitalize;
   color: var(--navy-blue);
-  margin-bottom: 72px;
 }
 .subtitle {
+  margin-bottom: 8px;
+
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
-  margin-bottom: 8px;
 }
 .desc {
   letter-spacing: 0.02em;
@@ -114,6 +120,8 @@ img {
 
 /* Logo */
 .logo {
+  margin-right: 76px;
+
   font-family: var(--secondary-font);
   font-size: 18px;
   font-weight: 800;
@@ -121,7 +129,6 @@ img {
   letter-spacing: 0.03em;
   color: var(--iris);
   text-transform: uppercase;
-  margin-right: 76px;
 }
 .header-logo {
   font-family: var(--secondary-font);
@@ -138,16 +145,42 @@ img {
   margin-right: auto;
 }
 .header-menu a {
+  position: relative;
+
+  display: block;
+  padding: 24px 0px;
+
   font-weight: 500;
   color: var(--navy-blue);
-  padding: 24px 0px;
-  display: block;
+
+  transition: color var(--anim);
 }
 .header-menu a:hover {
   color: var(--ocean);
 }
 .header-menu a:focus {
   color: var(--ocean);
+}
+.header-menu a::after {
+  content: "";
+  position: absolute;
+
+  display: block;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+
+  border-radius: 2px;
+
+  transition: background-color var(--anim);
+}
+.header-menu a.current {
+  color: var(--ocean);
+}
+.header-menu a.current::after,
+.header-menu a:hover::after,
+.header-menu a:focus::after {
+  background-color: var(--ocean);
 }
 
 /* Contacts */
@@ -157,6 +190,7 @@ img {
 .header-contacts a {
   color: var(--slate);
   padding: 24px 0px;
+  transition: color var(--anim);
 }
 .header-contacts a:hover {
   color: var(--ocean);
@@ -167,8 +201,11 @@ img {
 
 /* Hero image */
 .hero {
-  background-color: var(--navy-blue);
   padding: 188px 0px;
+  margin: auto;
+  max-width: 1440px;
+
+  background-color: var(--navy-blue);
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -176,40 +213,43 @@ img {
     url(../images/section_hero/people-office.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  max-width: 1440px;
-  margin: auto;
   background-size: cover;
 }
 
 .hero-title {
+  text-align: center;
+  max-width: 500px;
+  margin-right: auto;
+  margin-left: auto;
+
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: var(--white);
-  text-align: center;
-  max-width: 500px;
-  margin-right: auto;
-  margin-left: auto;
 }
 .hero-btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 48px;
+  min-width: 169px;
+  min-height: 56px;
+  align-items: center;
+
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  align-items: center;
   color: var(--white);
+
   background-color: var(--iris);
   cursor: pointer;
-  margin: 0 auto;
-  display: block;
-  margin-top: 48px;
-  min-width: 169px;
-  min-height: 56px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: 0px;
   border-radius: 4px;
+
+  transition: background-color var(--anim);
 }
 .hero-btn:hover {
   background-color: var(--ocean);
@@ -239,9 +279,10 @@ img {
   align-items: center;
   justify-content: center;
   height: 112px;
+  margin-bottom: 8px;
+
   border-radius: 4px;
   background-color: var(--cloud);
-  margin-bottom: 8px;
 }
 
 /* Section 3 */
@@ -250,8 +291,9 @@ img {
 }
 .what-are-we-doing-list-item {
   margin-right: 24px;
-  border: 1px solid var(--cornflower);
   width: calc((100% - 3 * 16px) / 3);
+
+  border: 1px solid var(--cornflower);
 }
 
 /* Section Team */
@@ -260,8 +302,9 @@ img {
   padding: 120px 0;
 }
 .team-list-item {
-  background-color: var(--white);
   margin-right: 24px;
+
+  background-color: var(--white);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
@@ -269,11 +312,13 @@ img {
 .team-card-desc {
   padding: 32px 0px;
   text-align: center;
+
   border-radius: 0px 0px 4px 4px;
 }
 .team-position {
-  letter-spacing: 0.02em;
   margin-bottom: 8px;
+
+  letter-spacing: 0.02em;
 }
 /* Socials icons */
 .team-social {
@@ -287,8 +332,11 @@ img {
   align-items: center;
   width: 40px;
   height: 40px;
+
   background-color: var(--iris);
   border-radius: 50%;
+
+  transition: background-color var(--anim);
 }
 .team-socail-link:hover {
   background-color: var(--ocean);
@@ -322,9 +370,12 @@ img {
   align-items: center;
   width: 100%;
   height: 100%;
+
   border: 1px solid var(--light-slate);
   border-radius: 4px;
   color: var(--light-slate);
+
+  transition: color var(--anim), border var(--anim);
 }
 .customers-link:hover {
   color: var(--ocean);
@@ -369,11 +420,12 @@ img {
   max-width: 264px;
 }
 .footer-socials-title {
+  margin-bottom: 16px;
+
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--white);
-  margin-bottom: 16px;
 }
 .footer-socials-list {
   display: flex;
@@ -389,8 +441,11 @@ img {
   align-items: center;
   width: 100%;
   height: 100%;
+
   background-color: var(--iris);
   border-radius: 50%;
+
+  transition: background-color var(--anim);
 }
 .footer-socials-link:hover {
   background-color: var(--green);
@@ -419,6 +474,9 @@ img {
 }
 
 .portfolio-btn {
+  min-height: 48px;
+  padding: 12px 24px;
+
   font-family: inherit;
   font-weight: 500;
   text-align: center;
@@ -426,12 +484,14 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--iris);
+
   background-color: var(--cloud);
   cursor: pointer;
-  min-height: 48px;
-  padding: 12px 24px;
   border: 1px solid var(--cornflower);
   border-radius: 4px;
+
+  transition: color var(--anim), background-color var(--anim),
+    box-shadow var(--anim), border var(--anim);
 }
 .portfolio-btn:hover {
   color: var(--white);
@@ -471,6 +531,30 @@ img {
 .portfolio-card-list li:nth-child(n + 7) {
   margin-bottom: 0px;
 }
+.card-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateY(100%);
+
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+
+  background-color: var(--iris);
+  transition: transform var(--anim);
+}
+.overlay-label {
+  color: var(--cloud);
+  letter-spacing: 0.02em;
+}
+.portfolio-card-list-item:hover .overlay {
+  transform: translateY(0);
+}
 .portfolio-card-list-desc {
   padding: 32px 16px;
   border: 1px solid var(--cornflower);
@@ -478,6 +562,7 @@ img {
 }
 .portfolio-card-link {
   display: block;
+  transition: box-shadow var(--anim);
 }
 .portfolio-card-link:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -486,4 +571,54 @@ img {
 .portfolio-card-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+/* Modal */
+.blackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background-color: var(--navy-blue-modal);
+
+  transition: opacity var(--anim), visibility var(--anim);
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 576px;
+  padding: 24px;
+
+  background-color: var(--dairy);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-button {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  width: 24px;
+  height: 24px;
+
+  background: var(--cornflower);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.modal-icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
