--- a/css/styles.css
+++ b/css/styles.css
@@ -531,6 +531,7 @@ img {
 .portfolio-card-list li:nth-child(n + 7) {
   margin-bottom: 0px;
 }
+  /* Card overlay */
 .card-wrapper {
   position: relative;
   overflow: hidden;
@@ -552,13 +553,8 @@ img {
   color: var(--cloud);
   letter-spacing: 0.02em;
 }
-.portfolio-card-list-item:hover .overlay {
+.portfolio-card-link:hover .overlay {
   transform: translateY(0);
-}
-.portfolio-card-list-desc {
-  padding: 32px 16px;
-  border: 1px solid var(--cornflower);
-  border-top: none;
 }
 .portfolio-card-link {
   display: block;
@@ -571,6 +567,12 @@ img {
 .portfolio-card-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+  /* Card description */
+.portfolio-card-list-desc {
+  padding: 32px 16px;
+  border: 1px solid var(--cornflower);
+  border-top: none;
 }
 
 /* Modal */
